add reset password handler
