# cmd/api/handler/v1/reset_password/model.go
@@ -1,0 +1,5 @@
+package reset_password
+
+type SendResetPasswordReq struct {
+	Email string `json:"email"`
+}
